# pitxu

./: .gitignore  Makefile  README.md  definitions.py  epd_2in13_V4_test.py  pyproject.toml  runner.py
config/: main.yaml.dist
pitxu/: main.py
pitxu/lib/chatbot/: chatbot_protocol.py  geminai_chatbot.py
pitxu/lib/dto/: point.py  rectangle.py
pitxu/lib/eink/: display.py  macros.py
