[tool.poetry]
name = "pitxu"
version = "0.1.0"
description = "Chatbot for the Raspberry Pi Zero 2w"
authors = ["Xavi <xavi@arnaus.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyxavi = "^0.8"
google-genai = "^1.16"
python-dotenv = "^1.1"
spidev = [{version="^3.7", markers="sys_platform=='linux'"}]
gpiozero = [{version="^2.0", markers="sys_platform=='linux'"}]
"rpi.gpio" = [{version="^0.7", markers="sys_platform=='linux'"}]
lgpio = [{version="^0.2.2.0", markers="sys_platform=='linux'"}]
pillow = "^11.2.1"

[tool.poetry.scripts]
main = "runner:run"

[virtualenvs.options]
system-site-packages = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
